// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help Component renders correctly 1`] = `
.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  line-height: 48px;
  list-style: none;
  color: rgba(0, 0, 0, 0.6);
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2.navLink .MuiListItemText-root {
  color: #212121;
}

.emotion-2.navLink.active .MuiListItemText-root {
  color: rgba(0, 0, 0, 0.87);
}

.emotion-2.active {
  background: #bdbdbd;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-3.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-3.Mui-selected {
  background-color: rgba(25, 118, 210, 0.08);
}

.emotion-3.Mui-selected.Mui-focusVisible {
  background-color: rgba(25, 118, 210, 0.2);
}

.emotion-3.Mui-disabled {
  opacity: 0.38;
}

.emotion-4 .MuiListItemText-primary {
  font-size: 0.8rem;
}

.emotion-4 .MuiListItemText-primary:hover {
  color: #1976d2;
}

.emotion-5 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
}

.emotion-6 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  display: block;
}

.emotion-27 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
}

<div
  class="help-container"
>
  <ul
    class="MuiList-root MuiList-padding leftFixed emotion-0"
  >
    <li
      class="MuiListSubheader-root MuiListSubheader-gutters emotion-1"
    >
      Help & support
    </li>
    <a
      aria-current="page"
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink helpNav emotion-2 emotion-3 active"
      href="/help/get-started"
    >
      <div
        class="MuiListItemText-root emotion-4 emotion-5"
        url=""
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-6"
        >
          Getting started
        </span>
      </div>
    </a>
    <a
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink helpNav emotion-2 emotion-3"
      href="/help/downloads"
    >
      <div
        class="MuiListItemText-root emotion-4 emotion-5"
        url=""
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-6"
        >
          Downloads
        </span>
      </div>
    </a>
    <a
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink helpNav emotion-2 emotion-3"
      href="/help/support"
    >
      <div
        class="MuiListItemText-root emotion-4 emotion-5"
        url=""
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-6"
        >
          Contact support
        </span>
      </div>
    </a>
    <a
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink helpNav emotion-2 emotion-3"
      href="/help/mender-hub"
    >
      <div
        class="MuiListItemText-root emotion-4 emotion-5"
        url=""
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-6"
        >
          Mender Hub
        </span>
      </div>
    </a>
    <a
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink helpNav emotion-2 emotion-3"
      exact="true"
      href="https://docs.mender.io/"
      rel="noopener noreferrer"
      target="_blank"
      to="https://docs.mender.io/"
    >
      <div
        class="MuiListItemText-root emotion-4 emotion-5"
        url="https://docs.mender.io/"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-6"
        >
          Documentation
        </span>
      </div>
    </a>
  </ul>
  <div
    style="max-width: 780px;"
  >
    <p
      class="muted"
    >
      Help & support 
        &gt;  Getting started
    </p>
    <div
      class="help-content relative margin-top-small"
    >
      <div>
        <h2>
          Getting started
        </h2>
        <h3>
          Get Started guide
        </h3>
        <p>
          To quickly get started with the common use cases of Mender, follow the
           
          <a
            href="https://docs.mender.io/development/get-started"
            rel="noopener noreferrer"
            target="_blank"
          >
            Get Started chapter in our documentation 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-27"
              data-testid="LaunchIcon"
              focusable="false"
              style="vertical-align: text-bottom;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
          .
        </p>
        <h3>
          Installing Mender on your devices
        </h3>
        <p>
          We support several ways of integrating your devices with Mender. For a detailed introduction read the
           
          <a
            href="https://docs.mender.io/development/client-installation"
            rel="noopener noreferrer"
            target="_blank"
          >
            Client Installation documentation 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-27"
              data-testid="LaunchIcon"
              focusable="false"
              style="vertical-align: text-bottom;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
          .
        </p>
        <p>
          Integrations for different boards and operating systems can be found on
           
          <a
            href="https://hub.mender.io/c/board-integrations/6"
            rel="noopener noreferrer"
            target="_blank"
          >
            Mender Hub 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-27"
              data-testid="LaunchIcon"
              focusable="false"
              style="vertical-align: text-bottom;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
        </p>
        <h3>
          Creating Artifacts
        </h3>
        <p>
          Everything you need to package your software for deployment with Mender can be found here:
           
          <a
            href="https://docs.mender.io/development/artifact-creation"
            rel="noopener noreferrer"
            target="_blank"
          >
            Artifact Creation documentation 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-27"
              data-testid="LaunchIcon"
              focusable="false"
              style="vertical-align: text-bottom;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Help Component static components renders GettingStarted correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
}

<div>
  <h2>
    Getting started
  </h2>
  <h3>
    Get Started guide
  </h3>
  <p>
    To quickly get started with the common use cases of Mender, follow the
     
    <a
      href="https://docs.mender.io/get-started"
      rel="noopener noreferrer"
      target="_blank"
    >
      Get Started chapter in our documentation 
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
        data-testid="LaunchIcon"
        focusable="false"
        style="vertical-align: text-bottom;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
    </a>
    .
  </p>
  <h3>
    Installing Mender on your devices
  </h3>
  <p>
    We support several ways of integrating your devices with Mender. For a detailed introduction read the
     
    <a
      href="https://docs.mender.io/client-installation"
      rel="noopener noreferrer"
      target="_blank"
    >
      Client Installation documentation 
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
        data-testid="LaunchIcon"
        focusable="false"
        style="vertical-align: text-bottom;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
    </a>
    .
  </p>
  <p>
    Integrations for different boards and operating systems can be found on
     
    <a
      href="https://hub.mender.io/c/board-integrations/6"
      rel="noopener noreferrer"
      target="_blank"
    >
      Mender Hub 
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
        data-testid="LaunchIcon"
        focusable="false"
        style="vertical-align: text-bottom;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
    </a>
  </p>
  <h3>
    Creating Artifacts
  </h3>
  <p>
    Everything you need to package your software for deployment with Mender can be found here:
     
    <a
      href="https://docs.mender.io/artifact-creation"
      rel="noopener noreferrer"
      target="_blank"
    >
      Artifact Creation documentation 
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
        data-testid="LaunchIcon"
        focusable="false"
        style="vertical-align: text-bottom;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
    </a>
    .
  </p>
</div>
`;

exports[`Help Component static components renders MenderHub correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
}

<div>
  <h3>
    Find technical help at Mender Hub
  </h3>
  <a
    href="https://hub.mender.io"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      <img
        src="mender-hub-logo.png"
        style="width: 50%;"
      />
    </span>
  </a>
  <p>
    <a
      href="https://hub.mender.io"
      rel="noopener noreferrer"
      target="_blank"
    >
      Mender Hub
    </a>
     
    is a forum where you can ask technical questions and get help from our active and knowledgeable community.
  </p>
  <h4>
    Board integrations
  </h4>
  <p>
    Get help and instructions for integrating Mender with different boards and operating systems.
  </p>
  <h4>
    Community-supported resources
  </h4>
  <p>
    Find out-of-the-box and community-supported Update Modules and Configuration Scripts, and contribute your own.
  </p>
  <h4>
    Tutorials
  </h4>
  <p>
    Tutorials and how-to guides for various Mender use-cases including Yocto Project features and practices.
  </p>
  <h4>
    Feature requests
  </h4>
  <p>
    Submit your feature requests and feedback. Mender is an open source project and we encourage community contributions.
  </p>
  <p>
    <a
      href="https://hub.mender.io"
      rel="noopener noreferrer"
      target="_blank"
    >
      Visit Mender Hub 
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
        data-testid="LaunchIcon"
        focusable="false"
        style="vertical-align: text-bottom;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
    </a>
  </p>
</div>
`;

exports[`Help Component static components renders Support correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.25rem;
}

<div>
  <h2>
    Contact support
  </h2>
  <p>
    Do you have a paid plan and need to contact support?
  </p>
  <p>
    Send an email to
     
    <a
      href="mailto:support@mender.io"
      rel="noopener noreferrer"
      target="_blank"
    >
      support@mender.io
    </a>
    , including your organization name and how we can help you.
  </p>
  <h4>
    Reporting bugs
  </h4>
  <p>
    To help us best respond to bug reports, please include:
  </p>
  <ul>
    <li>
      Which software versions you are using
    </li>
    <li>
      If the issue can be reproduced, what are the steps to reproduce it?
    </li>
    <li>
      In case of a UI issue, any screenshots or screen recordings
    </li>
  </ul>
  <h3>
    Trial or open source users
  </h3>
  <div>
    <p>
      Find technical help at
    </p>
    <a
      href="https://hub.mender.io"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        <img
          src="mender-hub-logo.png"
          style="width: 50%;"
        />
      </span>
    </a>
    <p>
      Mender Hub is a forum where you can find help, ask technical questions and start discussions with our active and knowledgeable community.
    </p>
    <a
      href="https://hub.mender.io"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Ask a question at Mender Hub
      </span>
       
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
        data-testid="LaunchIcon"
        focusable="false"
        style="vertical-align: text-bottom;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
    </a>
  </div>
</div>
`;
